# beefos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  beefos.sln  build.sh  buildenv  compile_commands.json  createiso.sh  efi.mak
boot/: Makefile  boot.vcxproj  boot.vcxproj.filters
boot/include/: util.h
boot/include/x86/: print.inc
boot/src/: boot.c  main.c  util.c
boot/src/x86/: start.asm
boot/src/x86_64/: enter_kernel.asm
include/: boot.h  executable.h  graphics.h  zip.h
include/beefos/: kabrt.h  kmem.h  kprintf.h  macro.h  types.h
kernel/: Makefile  kernel.mak
kernel/graphics/: Makefile
kernel/graphics/include/: graphics.h
kernel/graphics/src/: pixel.c  rect.c  screen.c
kernel/main/: Makefile
kernel/main/src/: main.c
kernel/util/: Makefile
kernel/util/include/: util.h
kernel/util/src/x86_64/: reverse.asm
props/: nasm.props  nasm.targets  nasm.xml
src/: CMakeLists.txt  grub.cfg  link.ld
src/kern/: CMakeLists.txt  Makefile
src/kern/arch/i386/: boot.S  crti.S  tty.c  vga.h
src/kern/arch/x86/: Makefile  boot.S  crtn.S  mmap.h  tty.c  vga.h
src/kern/include/beefos/: asmbridge.h  kabrt.h  kitoa.h  kmem.h  kprintf.h  kstring.h  macro.h  memmgr.h  mmap.h  tty.h  types.h  vga.h
src/kern/init/: main.c
src/kern/kern/: main.c
src/kern/klibc/: CMakeLists.txt
src/kern/klibc/kabrt/: kabort.c
src/kern/klibc/kprintf/: kprintf.c
src/kern/klibc/kstring/: kmemcmp.c  kmemcpy.c  kmemmove.c  kmemset.c  kstrlen.c
src/klibc/: CMakeLists.txt  Makefile
src/klibc/kabrt/: kabort.c
src/klibc/kitoa/: kitoa.c
src/klibc/kprintf/: kprintf.c
src/klibc/kstring/: kmemcmp.c  kmemcpy.c  kmemmove.c  kmemset.c  kstrlen.c  memcpy.c
templates/: default.vcxproj
tools/: build.bat  buildcmd.bat  buildenv.bat  mkbootdisk.py  mkbootimg.bat  oscdimg.bat
